src/objects/Dexcom_Invoice_Billing_Address__mdt.object
<CustomObject>
    <description>Records the Dexcom address for each country</description>
    <fields>
        <fullName>City__c</fullName>
        <description>Tracks the city</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Records Dexcom Company Name</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Records the country code</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <description>Records the IBAN Details</description>
        <label>IBAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Tracks the zip</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Tracks the street</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dexcom Invoice Billing Address</label>
    <pluralLabel>Dexcom Invoice Billing Address</pluralLabel>
</CustomObject>